--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-terser": "^0.1.0",
     "@types/pako": "^2.0.0",
+    "@types/serialport": "^8.0.2",
     "@types/w3c-web-serial": "^1.0.3",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
